# DesignPattern

./: .gitignore  CMakeLists.txt  README.md  todo.txt
01_AbstractFactory/: CMakeLists.txt  MazeGame.cpp  basictypes.h  bombedmazefactory.h  enchantedmazefactory.h  factory.h  main.cpp  mazegame.h  types.h
test/: test.h
创建型/Singleton/: CMakeLists.txt  README.md
创建型/单例模式/: README.md
创建型/原型模式/: CMakeLists.txt  README.md  main.cpp
创建型/生成器模式/: CMakeLists.txt  main.cpp
结构型/Adapter/: CMakeLists.txt  Common.h  Manipulator.cpp  Manipulator.h  README.md  Shape.cpp  Shape.h  TextView.cpp  TextView.h
结构型/Bridge/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  IconWindow.cpp  IconWindow.h  PMWindowImp.cpp  PMWindowImp.h  README.md  View.h  Window.cpp  Window.h  WindowImp.cpp  WindowImp.h  XWindowImp.cpp  XWindowImp.h  main.cpp
结构型/Composite/: CMakeLists.txt  Chassis.cpp  Chassis.h  Common.h  CompositeEquipment.cpp  CompositeEquipment.h  Equipment.cpp  Equipment.h  FloppyDisk.cpp  FloppyDisk.h  README.md  main.cpp
结构型/Decorator/: BorderDecorator.cpp  BorderDecorator.h  CMakeLists.txt  Decorator.cpp  Decorator.h  README.md  ScrollDecorator.cpp  ScrollDecorator.h  VisualComponent.cpp  VisualComponent.h  Window.cpp  Window.h  main.cpp
结构型/Facade/: BytecodeStream.cpp  BytecodeStream.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  Parser.cpp  Parser.h  ProgramNode.cpp  ProgramNode.h  ProgramNodeBuilder.cpp  ProgramNodeBuilder.h  README.md  RISCCodeGenerator.cpp  RISCCodeGenerator.h  Scanner.cpp  Scanner.h  Token.h  main.cpp
结构型/Proxy/: CMakeLists.txt  Common.h  Graphic.cpp  Graphic.h  Image.cpp  Image.h  ImageProxy.cpp  ImageProxy.h  README.md  TextDocument.cpp  TextDocument.h  main.cpp
结构型/享元模式/: CMakeLists.txt  README.md  main.cpp
结构型/代理模式/: CMakeLists.txt  main.cpp
结构型/外观模式/: CMakeLists.txt  main.cpp
结构型/桥接模式/: CMakeLists.txt  main.cpp
结构型/组合模式/: CMakeLists.txt  main.cpp
结构型/装饰器模式/: CMakeLists.txt  main.cpp
结构型/适配器模式/: CMakeLists.txt  main.cpp
行为型/ChainOfResponsibility/: Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  Dialog.cpp  Dialog.h  HelpHandler.cpp  HelpHandler.h  README.md  Widget.cpp  Widget.h  main.cpp
行为型/Iterator/: CMakeLists.txt  README.md  main.cpp
行为型/Mediator/: Button.cpp  (+13 more)
(+89 files in other folders)
